--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.22.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "styled-components": "^4.1.1",
     "styled-normalize": "^8.0.4"
